--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-memcached": "*",
         "guzzlehttp/guzzle": "^7.2",
         "laravel-lang/lang": "~10.3",
         "laravel/framework": "^10.10",
@@ -15,6 +16,7 @@
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.27",
+        "laravel/dusk": "^7.12",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
