--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "vite",
         "development": "mix",
-        "build": "vite build"
+        "build": "vite build",
+        "heroku-postbuild": "npm run production"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
