--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,7 @@ jobs:
 
     runs-on: ubuntu-latest
     services:
-      mysql:
+      mysql.test:
         image: 'mysql/mysql-server:8.0'
         ports:
           - 3306:3306
