--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Copy .env
         run: cp .env.example .env.testing
       - name: Install Dependencies
-        run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+        run: composer update && composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
         run: php artisan key:generate --env testing
       - name: Directory Permissions
