--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,7 +23,7 @@ jobs:
           MYSQL_USER: '${{ env.DB_USER_NAME }}'
           MYSQL_PASSWORD: '${{ env.DB_PASSWORD }}'
           MYSQL_ALLOW_EMPTY_PASSWORD: 1
-        options:
+        options: >-
           --health-cmd "mysqladmin ping"
           --health-interval 10s
           --health-timeout 5s
@@ -36,7 +36,7 @@ jobs:
           tools: composer:v2
       - uses: actions/checkout@v3
       - name: Copy .env
-        run: cp .env.example .env.testing
+        run: cp .env .env.testing
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
