--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,7 +36,7 @@ jobs:
           tools: composer:v2
       - uses: actions/checkout@v3
       - name: Copy .env
-        run: cp .env .env.testing
+        run: cp .env.example .env.testing
       - name: Install Dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
       - name: Generate key
