--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -3,6 +3,7 @@ name: laravel
 on:
   push:
   pull_request:
+  check_run:
 
 env:
   DB_USER_NAME: sail
@@ -45,5 +46,7 @@ jobs:
         run: chmod -R 777 storage bootstrap/cache
       - name: Set Hostname
         run: sudo echo "127.0.0.1 mysql.test" | sudo tee -a /etc/hosts
+      - name: build vite
+        run: npm run build
       - name: Execute tests (Unit and Feature tests) via PHPUnit
         run: vendor/bin/phpunit
