--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "production": "vite --production",
+        "production": "vite",
         "development": "mix",
         "build": "vite build",
         "heroku-postbuild": "npm run production"
